--- a/posts/数字签名.md
+++ b/posts/数字签名.md
@@ -100,42 +100,41 @@ SSL协议（Secure Sockets Layer）目前都是使用 **3.0以上**版本，而`
 
 总结以上的 `非对称加密`，`数字证书`，模拟一次https的流程
 
-1. 握手阶段（所有通信都是明文的）
+握手阶段（所有通信都是明文的）
+  1. Client发出加密通信请求，叫做`ClientHello请求`
 
-   1. Client发出加密通信请求，叫做`ClientHello请求`
+    - 发送信息：
 
-      - 发送信息：
+      1. 支持的协议版本，比如TLS 1.0版。
 
-        1. 支持的协议版本，比如TLS 1.0版。
+      2. 一个客户端生成的随机数 str1，用于生成"session key"。
 
-        2. 一个客户端生成的随机数 str1，用于生成"session key"。
+      3. 支持的加密方法，比如RSA公钥加密。
 
-        3. 支持的加密方法，比如RSA公钥加密。
+      4. 支持的压缩方法
 
-        4. 支持的压缩方法
+  2. Server回应，叫做`SeverHello请求`
 
-   2. Server回应，叫做`SeverHello请求`
+    - 发送信息：
+      1. 确认使用的加密通信协议版本，比如TLS 1.0版本。如果浏览器与服务器支持的版本不一致，服务器关闭加密通信。
+      2. 一个服务器生成的随机数 str2，用于生成"session key"。
+      3. 确认使用的加密方法，比如RSA公钥加密。
+      4. 服务器证书。（CA认证的，给到服务器的证书）
 
-      - 发送信息：
-        1. 确认使用的加密通信协议版本，比如TLS 1.0版本。如果浏览器与服务器支持的版本不一致，服务器关闭加密通信。
-        2. 一个服务器生成的随机数 str2，用于生成"session key"。
-        3. 确认使用的加密方法，比如RSA公钥加密。
-        4. 服务器证书。（CA认证的，给到服务器的证书）
+  3. Client 回应
 
-   3. Client 回应
-
-      - 先验证`服务器证书` （数字签名流程），从证书上颁发的CA机构中检查，用CA提供的公钥验证，如果证书**不是可信机构颁布**、或者**证书中的域名与实际域名不一致**、或者**证书已经过期** ，会提出一个警告⚠️，让操作者决定是否继续操作。
-      - 证书没问题，会拿出证书里的`Server公钥`, 然后回应给Server
-        - 发送信息
-          1. 一个随机数。该随机数用**服务器公钥加密**，防止被窃听。（非对称算法，公钥加密只能私钥解密）
-          2. 编码改变通知，表示随后的信息都将用双方商定的加密方法和密钥发送。（对称算法，约定好key值以后用对称算法通信）
-          3. Client握手结束通知，表示Clinet的握手阶段已经结束。这一项同时也是前面发送的所有内容的hash值，用来供Server校验。
-
-   4. Server的最后回应
-      - 根据三个`pre-master key` ，计算生成本次会话所用的"会话密钥（session key）"，用于对称算法的秘钥
+    - 先验证`服务器证书` （数字签名流程），从证书上颁发的CA机构中检查，用CA提供的公钥验证，如果证书**不是可信机构颁布**、或者**证书中的域名与实际域名不一致**、或者**证书已经过期** ，会提出一个警告⚠️，让操作者决定是否继续操作。
+    - 证书没问题，会拿出证书里的`Server公钥`, 然后回应给Server
       - 发送信息
-        1. 编码改变通知，表示随后的信息都将用双方商定的加密方法和密钥发送。（对称加密算法和session key的确认）
-        2. Server握手结束通知，表示Server的握手阶段已经结束。这一项同时也是前面发送的所有内容的hash值，用来供Client校验。
+        1. 一个随机数。该随机数用**服务器公钥加密**，防止被窃听。（非对称算法，公钥加密只能私钥解密）
+        2. 编码改变通知，表示随后的信息都将用双方商定的加密方法和密钥发送。（对称算法，约定好key值以后用对称算法通信）
+        3. Client握手结束通知，表示Clinet的握手阶段已经结束。这一项同时也是前面发送的所有内容的hash值，用来供Server校验。
+
+  4. Server的最后回应
+    - 根据三个`pre-master key` ，计算生成本次会话所用的"会话密钥（session key）"，用于对称算法的秘钥
+    - 发送信息
+      1. 编码改变通知，表示随后的信息都将用双方商定的加密方法和密钥发送。（对称加密算法和session key的确认）
+      2. Server握手结束通知，表示Server的握手阶段已经结束。这一项同时也是前面发送的所有内容的hash值，用来供Client校验。
 
 自此，握手阶段结束，接下来就是Server和Client进入加密通信，就是完全使用http协议了，只不过这里通过`session key` 加密内容。
 
